# mapping-iterative-assembler

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  bootstrap.sh  build.sh  configure  configure.ac
man/: Makefile.am  Makefile.in  ccheck.1  ma.1  mia.1
matrices/: Makefile.am  Makefile.in  ancient.submat.solexa.onepass.txt  ancient.submat.solexa.pe.txt  ancient.submat.txt  flat.submat.txt
misc/: easy-consensus.hs
src/: Makefile.am  Makefile.in  ccheck.cc  config.h  config.h.in  fsdb.c  fsdb.h  ima.c  ima.h  ima_main.c  io.c  io.h  kmer.c  kmer.h  map_align.c  map_align.h  map_alignment.c  map_alignment.h  map_assembler.c  mia.c  mia.h  mia_main.c  mt311.c  myers_align.c  myers_align.cc  myers_align.h  params.h  pssm.c  pssm.h  types.h
test/: mia_testsuite.c  tf.fna  tr1.fna
