bin_PROGRAMS = ima ma

ima_SOURCES = ima.c ima.h params.h types.h pssm.c pssm.h fsdb.h fsdb.c kmer.c kmer.h ima_main.c map_align.c map_align.h io.h io.c map_alignment.h map_alignment.c

ma_SOURCES = params.h types.h map_alignment.h map_alignment.c map_assembler.c io.h io.c map_align.h map_align.c
 
